--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="android.code.wing.baseapp" >
+    package="com.code.wing.baseapp" >
 
     <uses-feature android:name="android.hardware.type.watch" />
 
@@ -17,7 +17,7 @@
             android:required="false" />
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.code.wing.baseapp.MainActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.DeviceDefault.Light" >
             <intent-filter>
